--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,79 +14,352 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css"/>
+
     <style>
 
-        /* Show it is fixed to the top */
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 15px;
-  line-height: 30px; /* Vertically center the text there */
-  background-color: #f5f5f5;
-}
+        html {
+            position: relative;
+            min-height: 100%;
+        }
 
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
+        body {
+          /* Margin bottom by footer height */
+            margin-bottom: 100px;
+            height: auto;
+        }
 
-body > .container {
-  padding: 60px 15px 0;
-}
+        body > .container {
+            padding: 65px 15px 0;
+        }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            height: 37px;
+            width: 100%;
+            text-align: center;
+            color: white;
+            font-size: large;
+            display: inherit;
+            line-height: 20px;
+            background-color: #2E2E2E;
+        }
 
-code {
-  font-size: 80%;
-}
+        .footer a:first-child {
+            border-left: 1px solid #70726F;
+        }
 
-#ex1Slider .slider-selection {
-	background: #BABABA;
-}
+        .footer a {
+            color: #70726F;
+            font-size: 20px;
+            padding: 5px;
+            border-right: 1px solid #70726F;
+            transition: all .5s ease;
+        }
 
-.dropdown-submenu {
-    position: relative;
-}
+        #footer a:hover {
+            text-decoration: greenyellow;
+            color: #fff;
+            background: rgba(255, 255, 255, 0.2);
+            border-left: red 7px solid;
+            border-right: #f43d2b 7px solid;
+        }
 
-.dropdown-submenu .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -1px;
-}
+        .footer > .container {
+            padding-right: 35px;
+            padding-left: 80px;
+        }
 
-#hide1
-{
-    display: none;
-}
+        .footer a {
+            padding-left:20px;
+            padding-right:20px;
+        }
 
-#hide2
-{
-    display: none;
-}
+        .footer a {
+            margin-left:20px;
+            margin-right:20px;
+        }
 
-#show1
-{
-    display: inline-block;
-}
+        nav {
+                width: 100%;
+                height: 20px;
+                border-radius: 10px;
+                -moz-border-radius: 10px;
+            }
 
-#show2
-{
-    display: inline-block;
-}
+        #navbarNavDropdown li a:hover {
+            text-decoration: whitesmoke;
+            color: #fff;
+            border-radius: 5px;
+            -moz-border-radius: 5px;
+            background: rgba(255, 255, 255, 0.2);
+            border-left: red 2px solid;
+        }
+
+        .nav a{
+            color: white;
+            font-size: large;
+        }
+
+        .navbar-nav > li{
+            padding-left:20px;
+            padding-right:20px;
+        }
+
+        .navbar-nav > li{
+            margin-left:20px;
+            margin-right:20px;
+        }
+
+        code {
+            font-size: 80%;
+        }
+
+        .left {
+            width: 50px;
+            height: 100%;
+            background: #2f2f2f;
+            white-space: nowrap;
+            transition: width 0.5s ;
+            position: center;
+            z-index: 9999;
+        }
+        .left ul{
+            padding: 0;
+            list-style-type: none;
+            text-align: left;
+        }
+        .left li {
+            width: 100%;
+            height: 60px;
+            line-height: 50px;
+            padding-left: 18px;
+        }
+        .left li:hover {
+            background: #2E2E2E;
+        }
+
+        .left:hover {
+            width: 100%;
+        }
+
+        .left .item-menu {
+            height:50px;
+            overflow:hidden;
+            color:#fff;
+        }
+        .left a{
+            color: white;
+            text-decoration: cornflowerblue;
+            font-weight: bold;
+        }
+        span.menu{
+            padding-left: 100%;
+        }
+
+
+         /* Toggle Styles */
+
+         .nav-pills>li>a {
+             border-radius: 25px;
+         }
+
+         #wrapper {
+            padding-left: 0;
+            -webkit-transition: all 0.5s ease;
+            -moz-transition: all 0.5s ease;
+            -o-transition: all 0.5s ease;
+            transition: all 0.5s ease;
+            overflow: hidden;
+         }
+
+         #wrapper.toggled {
+            padding-left: 250px;
+            overflow: hidden;
+         }
+
+         #sidebar-wrapper {
+            z-index: 1000;
+            position: absolute;
+            left: 250px;
+            width: auto;
+            height: 100%;
+            margin-left: -250px;
+            overflow-y: auto;
+            background: #2E2E2E;
+            -webkit-transition: all 0.5s ease;
+            -moz-transition: all 0.5s ease;
+            -o-transition: all 0.5s ease;
+            transition: all 0.5s ease;
+         }
+
+         #wrapper.toggled #sidebar-wrapper {
+             width: 250px;
+         }
+
+         #page-content-wrapper {
+            position: absolute;
+            padding: 15px;
+            width: 100%;
+            overflow-x: hidden;
+         }
+
+         .xyz {
+             min-width: 400px;
+         }
+
+         #wrapper.toggled #page-content-wrapper {
+            position: absolute;
+            margin-right: 0px;
+         }
+
+         .fixed-brand {
+             width: 100%;
+         }
+
+         /* Sidebar Styles */
+
+         .sidebar-nav {
+            position: absolute;
+            top: 70px;
+            width: 130px;
+            margin: 0;
+            padding: 0;
+            list-style: inherit;
+            margin-top: 2px;
+         }
+
+         .sidebar-nav li {
+            text-indent: 25px;
+            line-height: 40px;
+         }
+
+         .sidebar-nav li a {
+            display: block;
+            text-decoration: none;
+            color: #999999;
+         }
+
+         .sidebar-nav li a:hover {
+            text-decoration: whitesmoke;
+            color: #fff;
+            background: rgba(255, 255, 255, 0.2);
+            border-left: red 2px solid;
+         }
+
+         .sidebar-nav li a:active,
+         .sidebar-nav li a:focus {
+             text-decoration: none;
+         }
+
+         .sidebar-nav > .sidebar-brand {
+            height: 75px;
+            font-size: 30px;
+            line-height: 60px;
+         }
+
+         .sidebar-nav > .sidebar-brand a {
+            color: #999999;
+         }
+
+         .sidebar-nav > .sidebar-brand a:hover {
+            color: #fff;
+            background: none;
+         }
+
+         .no-margin {
+            margin: auto;
+         }
+
+         @media(min-width:768px) {
+            #wrapper {
+                padding-left: 250px;
+            }
+            .fixed-brand {
+                width: 250px;
+            }
+            #wrapper.toggled {
+                padding-left: 0;
+            }
+            #sidebar-wrapper {
+                width: 250px;
+            }
+            #wrapper.toggled #sidebar-wrapper {
+                width: 250px;
+            }
+            #wrapper.toggled-2 #sidebar-wrapper {
+                width: 50px;
+            }
+            #wrapper.toggled-2 #sidebar-wrapper:hover {
+                width: 140px;
+            }
+            #page-content-wrapper {
+                top: 40px;
+                padding: 20px;
+                position: absolute;
+                -webkit-transition: all 0.5s ease;
+                -moz-transition: all 0.5s ease;
+                -o-transition: all 0.5s ease;
+                transition: all 0.5s ease;
+            }
+            #wrapper.toggled #page-content-wrapper {
+                position: relative;
+                margin-right: 0;
+                padding-left: 250px;
+            }
+            #wrapper.toggled-2 #page-content-wrapper {
+                position: relative;
+                margin-right: 0;
+                margin-left: -200px;
+                -webkit-transition: all 0.5s ease;
+                -moz-transition: all 0.5s ease;
+                -o-transition: all 0.5s ease;
+                transition: all 0.5s ease;
+                width: auto;
+            }
+         }
+
+            #ex1Slider .slider-selection {
+                background: #f43d2b;
+            }
+
+            .slider.slider-horizontal {
+                height: 30px;
+                width: 800px;
+                margin-top: -5px;
+                top: 80%;
+            }
+
+            .dropdown-submenu {
+                position: relative;
+            }
+
+            .dropdown-submenu .dropdown-menu {
+                top: 0;
+                left: 100%;
+                margin-top: -1px;
+            }
+
+            #hide1
+            {
+                display: none;
+            }
+
+            #hide2
+            {
+                display: none;
+            }
+
+            #show1
+            {
+                display: inline-block;
+            }
+
+            #show2
+            {
+                display: inline-block;
+            }
 
     </style>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -98,41 +371,95 @@ code {
 
 
 <body>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-        integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-        crossorigin=""></script>
-<!--<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>-->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.2/jquery.ui.touch-punch.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/bootstrap-slider.min.js"></script>
-<script src="https://rawgit.com/dwilhelm89/LeafletSlider/master/SliderControl.js"></script>
-<script src="https://cdn.rawgit.com/IvanSanchez/Leaflet.Polyline.SnakeAnim/master/L.Polyline.SnakeAnim.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+            integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+            crossorigin=""></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.2/jquery.ui.touch-punch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/bootstrap-slider.min.js"></script>
+    <script src="https://rawgit.com/dwilhelm89/LeafletSlider/master/SliderControl.js"></script>
+    <script src="https://cdn.rawgit.com/IvanSanchez/Leaflet.Polyline.SnakeAnim/master/L.Polyline.SnakeAnim.js"></script>
+
+    <!-- Header -->
+    {% include 'navbar.html' %}
+
+    <div id="wrapper">
+      <!-- Sidebar -->
+      <div id="sidebar-wrapper">
+         <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
+         <li class="active">
+             <a href="/"><span class="fa-stack fa-lg pull-left"><i class="fa fa-dashboard fa-stack-1x "></i></span>Positioning System</a>
+         </li>
+
+             <li>
+               <a href="/"><span class="fa-stack fa-lg pull-left"><i class="fa fa-dashboard fa-stack-1x "></i></span> File</a>
+               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/table">View file</a></li>
+                  <li><a href="{{ url_for('upload_data') }}">Open...</a>
+                    <form class="form-inline mt-2 mt-md-0"></form></li>
+               </ul>
+            </li>
+
+            <li>
+               <a href="/"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Edit</a>
+               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/add_user">Insert User</a></li>
+                  <li><a href="/add_location">Insert Data </a></li>
+                   <li class="divider"></li>
+                   <li><a href="/remove_user">Delete User</a></li>
+                  <li><a href="/remove_location">Delete Data </a></li>
+               </ul>
+            </li>
+                            {% if data %}
+
+            <li>
+                <a style="color:antiquewhite" id="show1"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Show All Markers</a>
+                <a style="color:antiquewhite" id="hide1"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Hide All Markers</a>
+            </li>
+            <li>
+                <a style="color:antiquewhite" id="show2"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Show Lines</a>
+                <a style="color:antiquewhite" id="hide2"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Hide Lines</a>
+            </li>
+                             {% endif %}
+
+         </ul>
+      </div>
+
+        <div id="page-content-wrapper">
+             <div class="container-fluid xyz">
+                <div class="row">
+                   <div class="col-lg-12">
+                       {% block content %}
+                       {% endblock %}
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container text-right">
+            <div id="footer">
+                <div class="row">
+
+                {% block footer %}
+                    {% if data %}
+                        <a><small style="color:whitesmoke" class="nav-link" onclick="doubleSPeed()">Speed: 2X</small></a>
+                        <a><small style="color:whitesmoke" class="nav-link" onclick="qtrSPeed()">Speed: 4X</small></a>
+                        <a><small style="color:whitesmoke" class="nav-link" onclick="singleSPeed()">Speed: 20X</small></a>
 
 
-<!-- Header -->
-{% include 'navbar.html' %}
+                        <a><small style="color:whitesmoke" class="nav-link" onclick="start()">Start</small></a>
+                        <a><small style="color:whitesmoke" class="nav-link" onclick="stop()">Stop</small></a>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm">
-            {% block content %}
-            {% endblock %}
+                    {% endif %}
+                {% endblock %}
+            </div>
         </div>
-    </div>
-</div>
-
-<!-- Footer -->
-<footer class="footer">
-    <div class="container">
-        <div id="footer">
-            {% block footer %}
-            <p class="navbar-text navbar-right"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>Positioning System</p>
-            {% endblock %}
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
