--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,22 +9,9 @@
     <div class="row">
         <div class="col-md-4">
             <br>
-            <br>
-            <span id="ex1CurrentSliderValLabel">Current time: <span id="ex1SliderVal"></span></span><br>
+            <span id="ex1CurrentSliderValLabel" style="font-size:16px;color:#2b56f4; font-weight:bold">Current time: <span id="ex1SliderVal" style="color:darkred; font-weight:bold"></span></span><br>
             <div class="btn-group" role="group" aria-label="...">
             </div>
-
-
-            <select onchange="fetch_data(this);">
-                <option disabled selected value> -- select an option --</option>
-                {% if users %}
-                    <option value="all">All Users</option>
-                    {% for user in users %}
-                        <option value="{{ user.username }}">{{ user.username }}</option>
-                    {% endfor %}
-                {% endif %}
-            </select>
-
             <form method="post" id="fetch_data">
                 <input type="hidden" id="username" name="username">
             </form>
@@ -34,25 +21,20 @@
             <br>
             <div align="center">
                 {% if data %}
-                    <p>Data length is: {{ count }}</p>
+                    <p style="font-size:14px;color:black;font-weight:bold">Data length is: {{ count }}</p>
                     <input
                             id="ex1"
                             data-slider-id='ex1Slider'
                             type="text"
                             data-slider-min="0"
-                            data-slider-max="{{ count }}"
+                            data-slider-max="1440"
                             data-slider-step="1"
                             data-slider-value="0"
+{#                          data-slider-ticks="[1, 2, 3]"#}
+{#	                        data-slider-ticks-labels='["short", "medium", "long"]'#}
                             data-provide="slider">
                 {% endif %}
                 <p id="data-holder"></p>
-            </div>
-        </div>
-
-        <div class="col-md-4"><br><br>
-            <div align="center">
-                <p>Number of shown markers:</p>
-                <input type="number" value="1" id="limit">
             </div>
         </div>
     </div>
@@ -60,7 +42,7 @@
     <script>
 
         /**
-         * begin of block code for the Show and hide of the Marker and Polyline buttons JQUERY
+         * Block Initialization code to Show and Hide the Marker and Polyline buttons JQUERY
          */
 
         $('#show1').click(function () {
@@ -84,7 +66,7 @@
         });
 
 
-        /** end of block code for the Show and hide of the Marker and Polyline buttons JQUERY */
+        /** End of block code for the Show and hide of the Marker and Polyline buttons JQUERY */
 
         /**
          * Global declaration of the Variables
@@ -94,7 +76,6 @@
         var markersLayer = new L.LayerGroup();
         var pathLayer = new L.LayerGroup();
         var counter = 0;
-        var counter2 = 0;
         var speed = 1000;
         var allMarkers = new L.LayerGroup();
         var newMarkers = new L.LayerGroup();
@@ -106,14 +87,14 @@
 
 
         /**
-         *
+         * Block for displaying the slider in infinite loops
          */
 
         function loop() {
             mymap.removeLayer(markersLayer);
             mySlider.slider('setValue', ++counter);
 
-            if (counter === {{ count }} - 1) {
+            if (counter === 1439) {
                 newMarkers.clearLayers();
                 counter = 0;
             }
@@ -121,14 +102,13 @@
 
 
         /**
-         * start class for limiting the number of markers on the Map
+         * Class for limiting the number of markers on the Map
          */
 
         class ArrayHolder {
             constructor() {
                 this.markers = [];
                 this.limit = 1;
-                this.nums = [];
             }
 
             getMarkers() {
@@ -147,26 +127,23 @@
                 return this.markers;
             }
 
-            addNums(value) {
-
-                if (this.nums.length >= this.limit) {
-                    let removedElem = this.nums.shift();
-                    console.log("Limit is: " + this.limit + ". Removing element: " + removedElem);
-                }
-
-                this.nums.push(value);
-                console.log("This.markers is : ", this.nums);
-                {#return this.markers;#}
-            }
-
             changeLimit(value) {
-                console.log("Changing limitation to " + value);
                 this.limit = value;
             }
         }
 
         /**
-         * start defining functions for the slider
+         * Function to convert integer values into Hours and Minutes
+         */
+
+        function time_convert(num) {
+            var hours = Math.floor(num / 60);
+            var minutes = num % 60;
+            return hours + ":" + minutes;
+        }
+
+        /**
+         * Start defining functions for different Buttons to visualize the markers
          */
 
         function start() {
@@ -176,13 +153,6 @@
 
         function stop() {
             clearInterval(timer);
-        }
-
-        function singleSPeed() {
-            clearInterval(timer);
-            speed = 1000;
-            stop();
-            start();
         }
 
         function doubleSPeed() {
@@ -200,20 +170,25 @@
             start();
         }
 
-        /** end of functions for the slider */
+        function singleSPeed() {
+            clearInterval(timer);
+            speed = 50;
+            stop();
+            start();
+        }
 
         /**
          * Fetching the User Names to be selected from the Slider.
          */
 
         function fetch_data(e) {
-            var name = $(e).val();
+            let name = $(e).val();
             $('#username').val(name);
             $("#fetch_data").submit();
         }
 
         /**
-         * start Assigning different colors to the icons of the markers
+         * Assigning different colors to the icons of different markers
          */
 
         function getColor(id) {
@@ -257,11 +232,11 @@
         }
 
         /**
-         *
+         * Function to convert Json format to Markers Array
          */
 
         function transformFromJsonToMarker(obj) {
-            var markers = [];
+            let markers = [];
             for (var k = 0; k < obj.length; ++k) {
                 markers.push(
                     L.marker([obj[k]['lat'], obj[k]['lan']], {
@@ -273,6 +248,10 @@
             }
             return markers;
         }
+
+        /**
+         * Function to sort the data set
+         */
 
         function n(n) {
             return n > 9 ? "" + n : "0" + n;
@@ -290,7 +269,7 @@
         }
 
         /**
-         *
+         * Extracting Latitude and Longitude to be used in Polyline
          */
 
         function extractPts(obj) {
@@ -302,7 +281,7 @@
         }
 
         /**
-         *
+         * Extracting the timestamp with ( old_field = only time ) & ( new_field = date and time )
          */
 
         function replaceByValue(obj, old_field, new_field) {
@@ -315,7 +294,7 @@
         }
 
         /**
-         *
+         * Adding a new layer to display all the markers
          */
 
         function addLayerToMap(layer) {
@@ -325,12 +304,46 @@
         }
 
         /**
-         * This block of code executing right after page has been loaded
+        * Function to arrange the web application  navbar, body and footer
+        */
+
+        $("#menu-toggle").click(function(e) {
+           e.preventDefault();
+           $("#wrapper").toggleClass("toggled");
+        });
+        $("#menu-toggle-2").click(function(e) {
+           e.preventDefault();
+           $("#wrapper").toggleClass("toggled-2");
+           $('#menu ul').hide();
+        });
+
+        function initMenu() {
+           $('#menu ul').hide();
+           $('#menu ul').children('.current').parent().show();
+           //$('#menu ul:first').show();
+           $('#menu li a').click(
+              function() {
+                 var checkElement = $(this).next();
+                 if ((checkElement.is('ul')) && (checkElement.is(':visible'))) {
+                    return false;
+                 }
+                 if ((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
+                    $('#menu ul:visible').slideUp('normal');
+                    checkElement.slideDown('normal');
+                    return false;
+                 }
+              }
+           );
+        }
+
+
+        /**
+         * Block of code executing right after page has been loaded
          */
 
         $(document).ready(function () {
 
-            var markersHolder = new ArrayHolder();
+            let markersHolder = new ArrayHolder();
 
             $("#limit").on("change paste keyup", function () {
                 markersHolder.changeLimit($(this).val());
@@ -338,18 +351,16 @@
 
             /**
              * Creating a map with the coordinate of Beinjing
-            */
+             */
 
-            //Creating a map with coordinates of Beinjing
             mymap = L.map('map').setView([39.92553946, 116.45336151], 12);
             addLayerToMap(markersLayer);
             addLayerToMap(newMarkers);
 
             /**
-            * Adding the Tile Layer to the Map
-            */
+             * Adding the Tile Layer to the Map
+             */
 
-            //Adding Tile Layers to the Map
             L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
                 maxZoom: 22,
                 attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
@@ -368,18 +379,19 @@
                 e.preventDefault();
             });
 
-            /**
-             *
-             */
 
             {% if data %}
 
-                var data = JSON.parse({{ data|tojson|safe }});
+                let data = JSON.parse({{ data|tojson|safe }});
                 data = replaceByValue(data, 'timestamp', 'dt');
                 data.sort(GetSortOrder('dt'));
 
+                /**
+                 * JQUERY to show and hide all the markers on the Map
+                 */
+
                 $("#show1").click(function () {
-                    console.log("button that shows all markers if pressed");
+                    console.log("button that shows all markers is pressed");
                     allMarkers = new L.LayerGroup();
                     L.layerGroup(transformFromJsonToMarker(data)).addTo(allMarkers);
                     mymap.removeLayer(markersLayer);
@@ -389,77 +401,101 @@
                 });
 
                 $("#hide1").click(function () {
-                    console.log("button that hides all markers if pressed");
+                    console.log("button that hides all markers is pressed");
                     mymap.removeLayer(allMarkers);
                     isAddingLayerAllowed = true;
                     addLayerToMap(markersLayer);
                     addLayerToMap(pathLayer);
                 });
 
+
                 /**
-                 * Block for the Slider display on the map
+                 * Block for the Slider display and markers on the Map with 1 minute delay
                  */
 
                 mySlider = $('#ex1').slider({
                     formatter: function (value) {
-                        mymap.removeLayer(markersLayer);
 
-                        newMarkers.clearLayers();
+                        {#newMarkers.clearLayers();#}
 
-                        if(counter2 >= data.length)
-                        {
-                            counter2 = 0;
-                            return;
+                        for (var itm in data) {
+                            var date = new Date(data[itm]['timestamp']);
+                            var timestmp = (date.getHours() * 60) + date.getMinutes();
+
+                            if (timestmp === value) {
+                                let user_icon = getColor(data[itm]['user_id']);
+                                markersHolder.addMarker(L.marker([data[itm]['lat'], data[itm]['lan']], {
+                                    time: data[itm]['timestamp'],
+                                    icon: user_icon
+                                }));
+                                $("#ex1SliderVal").text(data[itm]['timestamp']);
+                            }
+
                         }
-
-                        //markersLayer = new L.LayerGroup();
-                        let user_icon = getColor(data[counter2]['user_id']);
-                            markersHolder.addMarker(L.marker([data[counter2]['lat'], data[counter2]['lan']], {
-                                time: data[counter2]['timestamp'],
-                                icon: user_icon
-                            })
-                        );
-
-                        markersHolder.addNums(counter2++);
 
                         let tmp = markersHolder.getMarkers();
 
                         L.layerGroup(tmp).addTo(newMarkers);
 
-                        $("#ex1SliderVal").text(data[value]['timestamp']);
-                        return 'Current value: ' + data[value]['timestamp'];
+                        return 'Current value: ' + time_convert(value);
                     }
+                });
+
+
+                mySlider.on("slideStop", function(slideEvt) {
+                    $("#ex1SliderVal").text(value[slideEvt.value]);
+                    tmp = slideEvt.value;
+
+                    interval = setInterval(loop, 1000);
+                });
+
+                mySlider.on("slideStart", function(slideEvt) {
+                    clearInterval(interval);
+
+                    markersLayer.clearLayers();
+                    mymap.removeLayer(markersLayer);
+                    markersLayer.addTo(mymap);
                 });
 
                 /**
                  * Block call for the Polyline display
                  */
 
-                 $("#show2").click(function () {
-                     var path = L.polyline(extractPts(data), {
-                         snakingSpeed: 25,
-                         color: 'red',
-                         weight: 3,
-                         opacity: 1,
-                         smoothFactor: 1
-                     });
+                $("#show2").click(function () {
+                    console.log("button that shows Polyline is pressed");
+                    var path = L.polyline(extractPts(data), {
+                        snakingSpeed: 25,
+                        color: 'red',
+                        weight: 3,
+                        opacity: 1,
+                        smoothFactor: 1
+                    });
 
-                     pathLayer.addLayer((path).addTo(markersLayer));
-                     pathLayer.addLayer(L.marker(extractPts(data)[0]).addTo(markersLayer));
-                     pathLayer.addLayer(L.marker(extractPts(data)[data.length - 1]).addTo(markersLayer));
+                    pathLayer.addLayer((path).addTo(markersLayer));
+                    pathLayer.addLayer(L.marker(extractPts(data)[0]).addTo(markersLayer));
+                    pathLayer.addLayer(L.marker(extractPts(data)[data.length - 1]).addTo(markersLayer));
 
-                     path.snakeIn();
-                 });
+                    path.snakeIn();
+                });
 
-                 $("#hide2").click(function () {
-                     mymap.removeLayer(markersLayer);
-                 });
+                $("#hide2").click(function () {
+                    console.log("button that hide Polyline is pressed");
+                    mymap.removeLayer(markersLayer);
+                });
 
                 // $("#data-holder").text(JSON.stringify(data));
+
+
+            initMenu();
+
 
             {% endif %}
 
             console.log("ready!");
+        });
+
+        $("#check-all-users").click(function () {
+            $('input:checkbox').not(this).prop('checked', this.checked);
         });
 
     </script>
