--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,76 +1,76 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark" role="navigation">
+<!-- navbar-header-->
+
     <div>
-      <a class="btn btn-outline-success" href="/">Map Visualization <span class="sr-only">(current)</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="True" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        </div>
+      <li class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+         <ul class="nav navbar-nav">
+            <li>
+               <a style="color:cornflowerblue"  class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2"> <span class="glyphicon glyphicon-th-large" aria-hidden="false"></span></a>
+            </li>
+         </ul>
+      </li>
+    </div>
 
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <button class="btn btn-default" type="button" data-toggle="dropdown">File
-            </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown" role="navigation">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav nav-item dropdown">
+            <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-screenshot" aria-hidden="false"></span>Positioning System</a>
+        </li>
+
+      <li class="nav nav-item dropdown active">
+        <a class="nav-link" href="/" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">File</a>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <li><a style="color:gray" class="nav-link" href="/table">View file</a></li>
+            <li class="divider"></li>
+            <li class="nav-item dropdown">
+                <a style="color:gray" href="{{ url_for('upload_data') }}">Open...</a>
+                <form class="form-inline mt-2 mt-md-0"></form>
+            </li>
+        </ul>
+      </li>
+
+
+        <li class="nav nav-item dropdown active">
+            <a class="nav-link" href="/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Edit</a>
             <ul class="dropdown-menu">
-                <li><a class="nav-link" href="/table">View Document <span class="sr-only">(current)</span></a></li>
-                <li class="divider"></li>
-                <li class="nav-item dropdown">
-                    <a href="{{ url_for('upload_data') }}">New Document</a>
-                    <form class="form-inline mt-2 mt-md-0"></form>
-                </li>
-                <li class="divider"></li>
-
                 <li class="dropdown-submenu">
-                    <a class="nav-link" tabindex="-1" href="/">Insert New Data <span class="caret"></span></a>
+                    <a style="color:gray" class="nav-link" href="/">Insert <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" tabindex="-1" href="/add_user">Insert New User <span class="sr-only">(current)</span></a></li>
+                        <li><a style="color:gray" href="/add_user">New User <span class="sr-only">(current)</span></a></li>
                         <li class="divider"></li>
-                        <li><a class="dropdown-item" tabindex="-1" href="/add_location">Insert New Data <span class="sr-only">(current)</span></a></li>
+                        <li><a style="color:gray" href="/add_location">New Data <span class="sr-only">(current)</span></a></li>
                     </ul>
                 </li>
 
                 <li class="divider"></li>
 
                 <li class="dropdown-submenu">
-                    <a class="nav-link" tabindex="-1" href="/">Delete Existing Data <span class="caret"></span></a>
+                    <a style="color:gray" class="nav-link" href="/">Delete <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" tabindex="-1" href="/remove_user">Delete Existing User <span class="sr-only">(current)</span></a></li>
+                        <li><a style="color:gray" href="/remove_user">Existing User <span class="sr-only">(current)</span></a></li>
                         <li class="divider"></li>
-                        <li><a class="dropdown-item" tabindex="-1" href="/remove_location">Delete Existing Data <span class="sr-only">(current)</span></a></li>
+                        <li><a style="color:gray" href="/remove_location">Existing Data <span class="sr-only">(current)</span></a></li>
                     </ul>
                 </li>
             </ul>
+        </li>
 
-                                        {% if data %}
-            <div>
-                <div class="col-md-4">
-                    <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="nav-link" onclick="start()">Start</button>
-                        <button type="button" class="nav-link" onclick="stop()">Stop</button>
-                    </div>
-                </div>
-            </div>
 
-            <div>
-                <div class="col-md-4">
-                    <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="collapse navbar-collapse" onclick="singleSPeed()">Speed: 1X</button>
-                        <button type="button" class="collapse navbar-collapse" onclick="doubleSPeed()">Speed: 2X</button>
-                        <button type="button" class="collapse navbar-collapse" onclick="qtrSPeed()">Speed: 4X</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" id="show1" class="btn btn-default">Show All Markers</button>
-+                   <button type="button" id="hide1" class="btn btn-default">Hide All Markers</button>
-                </div>
-
-                <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" id="show2" class="btn btn-default">Show Lines</button>
-+                   <button type="button" id="hide2" class="btn btn-default">Hide Lines</button>
-                </div>
-            </div>
-                            {% endif %}
-
-        </div>
-    </nav>
+        <li class="nav nav-item dropdown active">
+            <a class="nav-link" href="/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Animation</a>
+            <ul class="dropdown-menu">
+                {% if users %}
+                    <form method="post">
+                    <input type="checkbox" id="check-all-users"> All users <br>
+                        {% for user in users %}
+                            <input type="checkbox" name="username" value="{{ user.username }}">
+                             {{ user.username }}<br>
+                        {% endfor %}
+                        <input type="submit" value="Get data" class="btn btn-success">
+                    </form>
+                {% endif %}
+            </ul>
+        </li>
+    </ul>
+  </div>
+</nav>
